espresso (0.99.9) UNRELEASED; urgency=low

  * Drop on_key_press handler from GTK frontend; setting has_default on the
    Next button is cleaner, and having both that and a keypress handler
    breaks things.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 10 Feb 2006 12:35:49 +0000

espresso (0.99.8) dapper; urgency=low

  * Use new target-config hooks from espresso-casper rather than copying
    xorg.conf and (wrongly) reconfiguring gnome-panel-data ourselves.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri,  3 Feb 2006 16:13:43 +0000

espresso (0.99.7) dapper; urgency=low

  * Refactor FilteredCommand.run_command() into several pieces, leaving a
    wrapper there for convenience.
  * Use new UserSetupApply class from user-setup 0.05ubuntu2.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu,  2 Feb 2006 22:41:45 +0000

espresso (0.99.6) dapper; urgency=low

  * Initial work on porting to cdebconf (for speed and for increased
    compatibility with d-i), not enabled by default yet until I've had a
    chance to give it more testing.
  * Don't display paths while copying the filesystem; it will cause a lot of
    flickering when we make the counter update more often, and paths that
    are only updated at semi-random points every few seconds during the
    copying process are more confusing than interesting.
  * Fix apt-install to install packages in /target, not /.
  * Update the GTK interface much more frequently during the copying and
    configuration processes.
  * Fix various focus and default-dialog-action settings in the GTK
    interface.
  * Pad out the text in the debconf progress dialog a bit more.
  * Refactor DebconfFilter.run() into several pieces.
  * Rely on corrected return value from PartmanCommit.run_command().
    Requires partman (>= 78ubuntu1+3).

 -- Colin Watson <cjwatson@ubuntu.com>  Thu,  2 Feb 2006 17:56:29 +0000

espresso (0.99.5) dapper; urgency=low

  * Add get_hostname and get_mountpoints methods to frontends so that