@@ -57,6 +57,7 @@ from sys import stderr
 import pygtk
 pygtk.require('2.0')
 
+import gobject
 import gtk.glade
 import os
 import time
@@ -67,6 +68,7 @@ import Queue
 
 from gettext import bindtextdomain, textdomain, install
 
+from espresso import filteredcommand
 from espresso.backend import *
 from espresso.validation import *
 from espresso.misc import *
@@ -164,9 +166,8 @@ class Wizard:
         self.dbfilter = None
 
       if self.dbfilter is not None:
-        self.dbfilter.run_command()
-      else:
-        gtk.main()
+        self.dbfilter.start(auto_process=True)
+      gtk.main()
 
       if self.current_page is not None:
         self.process_step()
@@ -509,8 +510,7 @@ class Wizard:
     self.current_page = None
     if self.dbfilter is not None:
       self.dbfilter.cancel_handler()
-    else:
-      gtk.main_quit()
+    gtk.main_quit()
 
 
   # Callbacks
@@ -615,6 +615,7 @@ class Wizard:
 
     if self.dbfilter is not None:
       self.dbfilter.ok_handler()
+      # expect debconffilter_done() to be called when the filter exits
     else:
       gtk.main_quit()
 
@@ -955,12 +956,6 @@ class Wizard:
       if len (model) > 0:
         self.drives.set_active (0)
 
-    # Quit the main loop so that we can start up debconf coprocesses if
-    # required for this page. TODO cjwatson 2006-01-04: calling main_level()
-    # is very nasty!
-    if gtk.main_level() > 0:
-        gtk.main_quit()
-
 
   # Public method "on_autopartition_resize_toggled" __________________________
   def on_autopartition_resize_toggled (self, widget):
@@ -1027,6 +1022,24 @@ class Wizard:
 
   # Callbacks provided to components.
 
+  def watch_debconf_fd (self, from_debconf, process_input):
+    gobject.io_add_watch(from_debconf,
+                         gobject.IO_IN | gobject.IO_ERR | gobject.IO_HUP,
+                         self.watch_debconf_fd_helper, process_input)
+
+
+  def watch_debconf_fd_helper (self, source, cb_condition, callback):
+    debconf_condition = 0
+    if (cb_condition & gobject.IO_IN) != 0:
+      debconf_condition |= filteredcommand.DEBCONF_IO_IN
+    if (cb_condition & gobject.IO_ERR) != 0:
+      debconf_condition |= filteredcommand.DEBCONF_IO_ERR
+    if (cb_condition & gobject.IO_HUP) != 0:
+      debconf_condition |= filteredcommand.DEBCONF_IO_HUP
+
+    return callback(source, debconf_condition)
+
+
   def debconf_progress_start (self, progress_min, progress_max, progress_title):
     self.debconf_progress_dialog.set_transient_for(self.live_installer)
     self.debconf_progress_dialog.set_title(progress_title)
@@ -1055,6 +1068,12 @@ class Wizard:
 
   def debconf_progress_stop (self):
     self.debconf_progress_dialog.hide()
+
+
+  def debconffilter_done (self, dbfilter):
+    # TODO cjwatson 2006-02-10: handle dbfilter.status
+    if dbfilter == self.dbfilter:
+      gtk.main_quit()
 
 
   def set_autopartition_choices (self, choices, resize_choice, manual_choice):
