@@ -3,6 +3,10 @@ espresso (0.99.9) UNRELEASED; urgency=low
   * Drop on_key_press handler from GTK frontend; setting has_default on the
     Next button is cleaner, and having both that and a keypress handler
     breaks things.
+  * Add a non-blocking mode to debconffilter, and watch the filter's input
+    from the GTK main loop (only for user-setup and partman so far). This
+    allows the GTK user interface to update while waiting for debconf
+    commands.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Fri, 10 Feb 2006 12:35:49 +0000
 
